--- a/style.css
+++ b/style.css
@@ -4,7 +4,9 @@ body {
 }
 
 .navbar-brand {
-    font-size: 3em;
+    font-size: 2.5em;
+    color: white !important;
+    width: 100% !important;
 }
 
 .nav-item {
@@ -16,13 +18,14 @@ body {
     background-size: cover;
     background-repeat: no-repeat;
     background-attachment: scroll;
+    width: 100%;
     min-height: 1080px;
 }
 
 .form-group {
     font-size: 2em;
     color: white;
-    padding: 0px 0px 25px 0px;
+    padding: 0px 0px 50px 0px;
 }
 
 .jumbotron .col {
